--- a/Draw/Controller/User/UserSettingController.xib
+++ b/Draw/Controller/User/UserSettingController.xib
@@ -69,7 +69,7 @@
 					<object class="IBUIImageView" id="402180008">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{4, 156}, {313, 301}}</string>
+						<string key="NSFrame">{{4, 139}, {313, 318}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="522965861"/>
@@ -117,7 +117,7 @@
 					<object class="IBUITableView" id="522965861">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">274</int>
-						<string key="NSFrame">{{28, 178}, {264, 268}}</string>
+						<string key="NSFrame">{{28, 170}, {264, 270}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<reference key="IBUIBackgroundColor" ref="365378037"/>
@@ -164,7 +164,7 @@
 					<object class="IBUIImageView" id="229871014">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{122, 55}, {71, 73}}</string>
+						<string key="NSFrame">{{10, 58}, {71, 73}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="423741808"/>
@@ -178,7 +178,7 @@
 					<object class="IBUIButton" id="423741808">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{125, 58}, {65, 63}}</string>
+						<string key="NSFrame">{{13, 61}, {65, 63}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="579114993"/>
@@ -198,7 +198,7 @@
 					<object class="IBUILabel" id="579114993">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{60, 133}, {200, 21}}</string>
+						<string key="NSFrame">{{99, 61}, {200, 21}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="402180008"/>
@@ -217,7 +217,6 @@
 						<string key="IBUIShadowOffset">{0, 1}</string>
 						<int key="IBUIBaselineAdjustment">1</int>
 						<float key="IBUIMinimumFontSize">10</float>
-						<int key="IBUITextAlignment">1</int>
 						<object class="IBUIFontDescription" key="IBUIFontDescription" id="932744858">
 							<int key="type">1</int>
 							<double key="pointSize">17</double>
@@ -263,7 +262,7 @@
 					<object class="IBUILabel" id="957331693">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{204, 133}, {111, 21}}</string>
+						<string key="NSFrame">{{99, 90}, {111, 21}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -421,12 +420,12 @@
 							<reference ref="522965861"/>
 							<reference ref="736104532"/>
 							<reference ref="778311197"/>
-							<reference ref="423741808"/>
-							<reference ref="579114993"/>
 							<reference ref="1028843056"/>
 							<reference ref="402180008"/>
-							<reference ref="229871014"/>
+							<reference ref="579114993"/>
 							<reference ref="957331693"/>
+							<reference ref="229871014"/>
+							<reference ref="423741808"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -527,6 +526,17 @@
 				<object class="IBPartialClassDescription">
 					<string key="className">PPTableViewController</string>
 					<string key="superclassName">PPViewController</string>
+					<object class="NSMutableDictionary" key="outlets">
+						<string key="NS.key.0">dataTableView</string>
+						<string key="NS.object.0">UITableView</string>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<string key="NS.key.0">dataTableView</string>
+						<object class="IBToOneOutletInfo" key="NS.object.0">
+							<string key="name">dataTableView</string>
+							<string key="candidateClassName">UITableView</string>
+						</object>
+					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/PPTableViewController.h</string>
